# zedpicker

./: README.md
crates/picker/: Cargo.toml
