[package]
name = "picker"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/picker.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow = "1.0.86"
gpui = { git = "https://github.com/zed-industries/zed.git" }
menu = { git = "https://github.com/zed-industries/zed.git" }
serde = { version = "1.0", features = ["derive", "rc"] }
ui = { git = "https://github.com/zed-industries/zed.git" }
workspace = { git = "https://github.com/zed-industries/zed.git" }
